Steps now have ingredients

--- a/app/views/activities/_step.html.haml
+++ b/app/views/activities/_step.html.haml
@@ -6,17 +6,12 @@
     .well
       %h6 Ingredients
       %table
-        %tr
-          %td Chicken breasts
-          %td 60
-          %td kg
-        %tr
-          %td Stuff
-          %td 60
-          %td g
-    %ul
-      %li Remove covering skin from breasts.
-      %li Peel away "tenders" from breasts.
+        - step.ingredients.each do |ingredient|
+          %tr
+            %td= ingredient.title
+            %td= ingredient.quantity
+            %td= ingredient.unit
+    %p= step.directions
   .span8
     .well.video
       .video-container
