set decimal precision

--- a/app/views/activities/_overview.html.haml
+++ b/app/views/activities/_overview.html.haml
@@ -27,7 +27,7 @@
               - recipe.ingredients.each do |ingredient|
                 %tr
                   %td= ingredient.title
-                  %td.quantity= ingredient.quantity
+                  %td.quantity= quantity_number(ingredient.quantity)
                   %td= ingredient.unit
                   %td
       .span4
