--- a/app/views/activities/_step_by_step.html.haml
+++ b/app/views/activities/_step_by_step.html.haml
@@ -23,5 +23,7 @@
     .row
       .span12
         %button.cooked-this
-          I cooked this!
+          .inner
+            %i.icon-pot-white
+            %span I cooked this!
 
