Just need to track session

--- a/app/assets/stylesheets/application/activities/_step_by_step.css.sass
+++ b/app/assets/stylesheets/application/activities/_step_by_step.css.sass
@@ -35,6 +35,8 @@ button.cooked-this
   border: none
   +border-radius(5px)
   padding: 3px
+  &:disabled
+    background: $brickLight
   .inner
     border: 1px dashed $white
     +border-radius(5px)
