--- a/app/assets/stylesheets/_bootstrap_config.scss
+++ b/app/assets/stylesheets/_bootstrap_config.scss
@@ -98,7 +98,7 @@ $btnInverseBackgroundHighlight:     $grayDarker;
 $inputBackground:               $white;
 $inputBorder:                   #ccc;
 $inputBorderRadius:             3px;
-$inputDisabledBackground:       $grayLighter;
+$inputDisabledBackground:       $brickLight;
 $formActionsBackground:         #f5f5f5;
 
 // Dropdowns
