store cooked in session and replace with text

--- a/app/views/activities/_step_by_step.html.haml
+++ b/app/views/activities/_step_by_step.html.haml
@@ -22,9 +22,12 @@
             .horizontal-divider
     .row
       .span12
-        = form_tag cooked_this_activity_path, remote: true do
-          = button_tag disable: @cooked_this, class: 'cooked-this' do
-            .inner
-              %i.icon-pot-white
-              %span I cooked this!
+        - if @cooked_this
+          %h4== #{activity.cooked_this} people cooked this, including you. Comment below with how it went!
+        - else
+          = form_tag cooked_this_activity_path, remote: true do
+            = button_tag disabled: @cooked_this, class: 'cooked-this' do
+              .inner
+                %i.icon-pot-white
+                %span I cooked this!
 
