clean up and add brickDark color

--- a/app/assets/stylesheets/_bootstrap_config.scss
+++ b/app/assets/stylesheets/_bootstrap_config.scss
@@ -30,7 +30,7 @@ $pink:                  #c3325f;
 $purple:                #7a43b6;
 $brick:                 #aa4311;
 $brickLight:            #FFBC99;
-
+$brickDark:             #803B0C;
 
 // Scaffolding
 // -------------------------
