--- a/app/views/activities/_step_by_step.html.haml
+++ b/app/views/activities/_step_by_step.html.haml
@@ -25,9 +25,8 @@
         - if @cooked_this
           %h4== #{activity.cooked_this} people cooked this, including you. Comment below with how it went!
         - else
-          = form_tag cooked_this_activity_path, remote: true do
-            %button.cooked-this{ data: { remote: true, method: :post } }
-              .inner
-                %i.icon-pot-white
-                %span I cooked this!
+          %a.cooked-this{ href: cooked_this_activity_path, data: { remote: true, method: :post } }
+            .inner
+              %i.icon-pot-white
+              %span I cooked this!
 
