update styleguide to include brickDark

--- a/app/assets/stylesheets/styleguide.css.sass
+++ b/app/assets/stylesheets/styleguide.css.sass
@@ -25,6 +25,7 @@
   font-size: 18px
 
 .show-grid
+  font-size: 14px
   .styleguide-brick
     +styleguide-swatch($brick)
     color: $white
@@ -36,4 +37,8 @@
   .styleguide-black
     +styleguide-swatch($black)
     color: $white
+  .styleguide-brickDark
+    +styleguide-swatch($brickDark)
+    color: $white
+
 
