--- a/app/views/styleguide/index.html.haml
+++ b/app/views/styleguide/index.html.haml
@@ -62,6 +62,8 @@
       $brick
     .span1.styleguide-brickLight
       $brickLight
+    .span1.styleguide-brickDark
+      $brickDark
   .row
     .span12
       %h3 Bullet Lists
