--- a/app/views/activities/cooked_success.js.erb
+++ b/app/views/activities/cooked_success.js.erb
@@ -1,5 +1,5 @@
-var $cooked_button = $('button.cooked-this');
-$cooked_button.replaceWith("<h4><%= @cooked_count %> people cooked this, including you. Comment below with how it went!</h4>");
+var $cooked_link = $('a.cooked-this');
+$cooked_link.replaceWith("<h4><%= @cooked_count %> people cooked this, including you. Comment below with how it went!</h4>");
 
 var $cooked_count = $('#cooked-count');
 $cooked_count.text("<%= @cooked_count %>");
