--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -33,6 +33,16 @@ ul.horizontal-list
 .horizontal-divider
   border-top: 1px solid $grayLight
 
+.icon-double-chevron-left
+  @extend .icon-chevron-left
+  &:before
+    content: "\f053 \f053"
+
+.icon-double-chevron-right
+  @extend .icon-chevron-right
+  &:before
+    content: "\f054 \f054"
+
 .icon-white
   color: $white
 
