Style navbar some

--- a/app/assets/stylesheets/_bootstrap_config.scss
+++ b/app/assets/stylesheets/_bootstrap_config.scss
@@ -35,7 +35,7 @@ $brickDark:             #803B0C;
 // Scaffolding
 // -------------------------
 $bodyBackground:        $white;
-$textColor:             $grayDark;
+$textColor:             $black;
 
 
 // Links
