--- a/app/assets/stylesheets/application/_navigation.css.sass
+++ b/app/assets/stylesheets/application/_navigation.css.sass
@@ -3,24 +3,47 @@
   position: relative
   background: $brick
   z-index: 9999
-  margin-bottom: 5px
-  padding: 5px
-  color: $white
+  padding: 11px 0 6px 0
   &.stuck-to-top
     +box-shadow(0px 0px 6px 0px black)
     position: fixed
     top: 0
-  a
-    color: $white
-  h5
-    text-transform: uppercase
-  ul
-    margin-top: 20px
-    li
-      border-left: 1px solid $white
-      margin-right: 10px
-      &:first-child
-        border: none
-  i
-    font-size: 22px
 
+  .navbar-inner
+    background: none
+    color: $white
+  .navbar .nav > li > a
+    color: $white
+    &:hover
+      color: $white
+
+  .nav-anchors
+    text-transform: uppercase
+    +font-sans-tiny
+    font-weight: bold
+    li
+      position: relative
+      padding: 0 5px
+      &:before
+        content: ''
+        display: inline-block
+        position: absolute
+        left: 0
+        top: 10px
+        height: 14px
+        border-left: 1px solid $white
+      &:first-child
+        &:before
+          border: none
+      a[class^="icon-"]
+        width: auto
+
+        &:before
+          margin-top: 2px
+          vertical-align: middle
+          font-size: 20px
+          padding-right: 6px
+
+  .disabled
+    &:before
+      color: $brickDark
