Tweak some navbar stuff

--- a/app/views/courses/_navigation.html.haml
+++ b/app/views/courses/_navigation.html.haml
@@ -11,7 +11,7 @@
             - else
               %a
                 %i.icon-double-chevron-left.disabled
-          %li
+          %li.navbar-activity-title
             .navbar-text
               %h4= model.title
           %li
