--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -26,13 +26,20 @@
   .caption.top-right p, .caption.middle-right p, .caption.bottom-right p
     margin-right: 40px
 
+  .navbar-activity-title
+    display: none
+
 
 /* Landscape phone to portrait tablet */
 @media (max-width: 767px)
   // make this items full-width (remove body padding)
-  .hero-unit, .slider-block
+  .hero-unit, .slider-block, .sticky-navbar
     margin-left: -20px
     margin-right: -20px
+
+  .hero-unit .container, .sticky-navbar
+    padding-left: 20px
+    padding-right: 20px
 
   .caption
     /* text sizes */
@@ -48,6 +55,9 @@
 
   .caption .small
     font-size: 18px
+
+  .nav-anchors [class^='icon-']:before
+    display: none
 
 @media (max-width: 480px)
   /* ##################### */
@@ -69,4 +79,10 @@
   .caption .small
     font-size: 12px
 
+  .sticky-navbar .navbar-inner
+    margin-left: -20px
+    margin-right: -20px
+    padding: 0
 
+  .sticky-navbar .nav-anchors li
+    padding: 0
