--- a/app/assets/stylesheets/application/_navigation.css.sass
+++ b/app/assets/stylesheets/application/_navigation.css.sass
@@ -1,12 +1,13 @@
 .sticky-navbar
-  width: 100%
   background: $brick
-  z-index: 9999
+  z-index: 10
   padding: 11px 0 6px 0
   &.stuck-to-top
     +box-shadow(0px 0px 6px 0px black)
     position: fixed
     top: 0
+    left: 0
+    right: 0
 
   .navbar-inner
     background: none
