--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -41,6 +41,10 @@
     padding-left: 20px
     padding-right: 20px
 
+  .stuck-to-top
+    margin-left: 0
+    margin-right: 0
+
   .caption
     /* text sizes */
 
@@ -79,10 +83,12 @@
   .caption .small
     font-size: 12px
 
-  .sticky-navbar .navbar-inner
-    margin-left: -20px
-    margin-right: -20px
-    padding: 0
-
-  .sticky-navbar .nav-anchors li
-    padding: 0
+  .sticky-navbar
+    padding-left: 5px
+    padding-right: 5px
+    .nav
+      margin-right: 0
+    .navbar-inner
+      padding: 0
+    .nav-anchors li
+      padding: 0
