show only icons on phone

--- a/app/assets/stylesheets/application/_navigation.css.sass
+++ b/app/assets/stylesheets/application/_navigation.css.sass
@@ -34,7 +34,7 @@
         border-left: 1px solid $white
       &:first-child
         &:before
-          border: none
+          border: 0
       a[class^="icon-"]
         width: auto
 
