--- a/app/views/courses/_navigation.html.haml
+++ b/app/views/courses/_navigation.html.haml
@@ -20,11 +20,11 @@
         %ul.nav.nav-anchors.pull-right
           %li
             %a.icon-info-sign.icon-white{href: '#overview'}
-              Overview
+              %span.nav-label Overview
           %li
             %a.icon-list-ol.icon-white{href: '#step-by-step'}
-              Step-By-Step
+              %span.nav-label Step-By-Step
           %li
             %a.icon-comment{href: '#disqus_thread'}
-              Comments
+              %span.nav-label Comments
 
