--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -60,8 +60,12 @@
   .caption .small
     font-size: 18px
 
-  .nav-anchors [class^='icon-']:before
-    display: none
+  .sticky-navbar
+    .nav-anchors
+      li:before
+        border: 0
+      .nav-label
+        display: none
 
 @media (max-width: 480px)
   /* ##################### */
@@ -82,6 +86,10 @@
 
   .caption .small
     font-size: 12px
+
+  .video-container
+    margin-left: -20px
+    margin-right: -20px
 
   .sticky-navbar
     padding-left: 5px
