update the breadcrumbs

--- a/app/assets/stylesheets/_bootstrap_config.scss
+++ b/app/assets/stylesheets/_bootstrap_config.scss
@@ -41,7 +41,7 @@ $textColor:             $black;
 // Links
 // -------------------------
 $linkColor:             $brick;
-$linkColorHover:        darken($linkColor, 15%);
+$linkColorHover:        $brickDark;
 
 
 // Typography
