--- a/app/views/activities/_breadcrumbs.html.haml
+++ b/app/views/activities/_breadcrumbs.html.haml
@@ -3,6 +3,6 @@
     %ul.breadcrumb
       %li
         = link_to "Accelerated Sous Vide Cooking Course", course_path(1)
-        >
+        %i.icon-chevron-right
       %li.active
         Module 7: Putting it All Together
