--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -56,6 +56,9 @@ ul.horizontal-list
   display: inline-block
   vertical-align: middle
 
+.breadcrumb .active
+  color: $grayDark
+
 iframe
   border: none
 
@@ -79,7 +82,7 @@ iframe
   +border-radius(3px)
 
 =input-placeholder
-  &::-webkit-input-placeholder
+  &:-webkit-input-placeholder
     @content
   &:-moz-placeholder
     @content
