--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -82,7 +82,7 @@ iframe
   +border-radius(3px)
 
 =input-placeholder
-  &:-webkit-input-placeholder
+  &::-webkit-input-placeholder
     @content
   &:-moz-placeholder
     @content
