add homepage draft copy

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -27,17 +27,26 @@
 .container
   .row
     .intro.span7
-      %h1 Learn the modernist technique
+      %h1 Welcome to ChefSteps.com
       %p
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pulvinar
-        lobortis dolor, sit amet mollis sem sagittis in. Etiam nec mauris enim.
-        Praesent suscipit, felis eu facilisis lobortis, eros odio adipiscing
-        felis, et congue justo est ut libero. Praesent dictum, nulla eu
-        ultricies ornare, arcu justo pulvinar nisl, id adipiscing velit nisl nec
-        nunc. Duis mollis, risus vitae suscipit tristique, augue odio
-        pellentesque tortor, in consectetur eros ligula et nulla. In id odio
-        quam. Nulla nisl libero, lacinia ac faucibus in, feugiat eu est. Donec
-        nec mi neque, et lacinia nisi. In hac habitasse platea dictumst.
+        ChefSteps is a totally new approach to learning the art *and* science
+        of cooking. Taught by a world-renowned team, you will master techniques
+        of traditional and modernist cooking through practical, hands-on
+        demonstrations with detailed step-by-step explanations. And unlike at
+        other culinary schools, you will learn the why's behind the how's from
+        experts who bring the science of cooking to life in a compelling and
+        practical way.  Whether you're a professional chef, a culinary student,
+        or a cooking enthusiast, if you're also a curious cook, then ChefSteps
+        is for you.  The classes at ChefSteps are challenging. They teach you
+        what we learned cooking with many of the world's best chefs,
+        collaborating with renowned food scientists, launching three acclaimed
+        experimental kitchens, and our personal experience teaching hundreds of
+        students and faculty at prestigious culinary schools.  But your hard
+        work will pay off. The skills you master, the intuition you develop,
+        and the fresh perspective on cooking you gain will give you greater
+        freedom to innovate and express your creative ideas with confidence in
+        the kitchen.  ChefSteps courses are free to learn. Sign up below and
+        we'll let you know when the Fall class is starting.
     .creators.span5
       %h3 From creators of Modernist Cuisine
       %ul.unstyled.creators
