--- a/app/assets/stylesheets/application/activities/_overview.css.sass
+++ b/app/assets/stylesheets/application/activities/_overview.css.sass
@@ -24,6 +24,7 @@
 
   ul.equipment
     li
+      padding: 5px 0
       list-style-type: disc
       +font-sans-medium
 
@@ -43,7 +44,7 @@
       tr
         color: $black
         td
-          padding-left: 10px
+          padding: 5px 0 5px 10px
         td:first-child
           width: 100%
 
