--- a/app/assets/stylesheets/application/_home.css.sass
+++ b/app/assets/stylesheets/application/_home.css.sass
@@ -10,13 +10,12 @@
 .intro
   h1
     color: $brick
-  p
-    +font-sans-small
 
 .creators
   margin-bottom: 20px
   h3
-    +font-sans-medium
+    +font-sans-small
+    line-height: 1.4em
     text-transform: uppercase
     font-weight: bold
   .creator
