--- a/app/views/activities/_step_by_step.html.haml
+++ b/app/views/activities/_step_by_step.html.haml
@@ -1,5 +1,5 @@
 .hero-unit.gray
-  .container#step-by-step
+  .container.step-by-step
     - activity.recipes.each do |recipe|
       - if recipe.steps.any?
         .row
