--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -11,15 +11,15 @@
     %a.carousel-control.right{ href: '#myCarousel', data: { slide: 'next' } } &rsaquo;
   .caption.middle-left.container
     .caption-content
-      %h3 Free to Learn
-      %h4 Cook better with sous vide
+      %h3 Master sous vide cooking
+      %h4 in our first free to learn cooking course
       = link_to "Preview Course »", course_path(1)
 
 .hero-unit.signup-banner
   .container
     .row
       .span9
-        %h2 ChefSteps is building an online culinary school.
+        %h2 ChefSteps is building the free to learn culinary school.
         %h3 Want to know when we launch?
       .span3
         = render 'mailing_list/subscribe'
@@ -29,24 +29,28 @@
     .intro.span7
       %h1 Welcome to ChefSteps.com
       %p
-        ChefSteps is a totally new approach to learning the art *and* science
-        of cooking. Taught by a world-renowned team, you will master techniques
-        of traditional and modernist cooking through practical, hands-on
-        demonstrations with detailed step-by-step explanations. And unlike at
-        other culinary schools, you will learn the why's behind the how's from
+        ChefSteps is a totally new approach to learning the art and science of
+        cooking. Whether you are a professional chef, a culinary student, or a
+        cooking enthusiast, if you are also a curious cook then ChefSteps is
+        for you.
+      %p
+        Taught by a world-renowned team, you will master techniques of
+        traditional and modernist cooking through practical, hands-on
+        demonstrations with detailed step-by-step explanations. Unlike at other
+        culinary schools, you will also learn the why's behind the how's from
         experts who bring the science of cooking to life in a compelling and
-        practical way.  Whether you're a professional chef, a culinary student,
-        or a cooking enthusiast, if you're also a curious cook, then ChefSteps
-        is for you.  The classes at ChefSteps are challenging. They teach you
-        what we learned cooking with many of the world's best chefs,
-        collaborating with renowned food scientists, launching three acclaimed
-        experimental kitchens, and our personal experience teaching hundreds of
-        students and faculty at prestigious culinary schools.  But your hard
-        work will pay off. The skills you master, the intuition you develop,
-        and the fresh perspective on cooking you gain will give you greater
-        freedom to innovate and express your creative ideas with confidence in
-        the kitchen.  ChefSteps courses are free to learn. Sign up below and
-        we'll let you know when the Fall class is starting.
+        practical way.
+      %p
+        The classes at ChefSteps are challenging. But your hard work will pay
+        off. The skills you master, the intuition you develop, and the fresh
+        perspective on cooking you gain will give you greater freedom to
+        innovate and express your creative ideas with confidence in the
+        kitchen.
+      %p
+        ChefSteps courses are free to learn. Sign up above and we'll let you
+        know when our first class starts. We won't share your email address and we 
+        don't like SPAM.
+
     .creators.span5
       %h3 From creators of Modernist Cuisine
       %ul.unstyled.creators
