--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -124,7 +124,8 @@
     #main-container
       = render 'layouts/header'
       = yield
-      = render 'layouts/footer'
+      -# Footer is diabled for now until after demo
+      -#= render 'layouts/footer'
     -# JS
     -# ==========================================================================
 
