--- a/app/assets/stylesheets/application/activities/_overview.css.sass
+++ b/app/assets/stylesheets/application/activities/_overview.css.sass
@@ -28,13 +28,14 @@
       +font-sans-medium
 
   table.ingredients
+    margin-top: 20px
     width: 100%
     +font-sans-medium
     thead
       color: $white
       background: $gray
       th
-        padding: 10px
+        padding: 15px
       th:first-child
         text-align: left
     tbody
@@ -43,7 +44,9 @@
       tr
         color: $black
         td
-          padding-left: 10px
+          padding: 10px
         td:first-child
           width: 100%
 
+  .cooked-this-count
+    margin-top: 15px
