--- a/app/assets/stylesheets/application/courses/_course_breakdown.css.sass
+++ b/app/assets/stylesheets/application/courses/_course_breakdown.css.sass
@@ -1,7 +1,9 @@
 .course-breakdown
   h3
-    +font-serif-medium
+    +font-serif-large
+    color: $brick
     text-transform: none
+    margin-top: 3.2em
   h4
     +font-sans-small
     text-transform: uppercase
