--- a/app/assets/stylesheets/application/courses/_show.css.sass
+++ b/app/assets/stylesheets/application/courses/_show.css.sass
@@ -5,7 +5,9 @@
   h1
     +font-serif-large
     color: $brick
+    margin-top: 3.2em
   h3
+    margin-top: 3.2em
     +font-serif-large
     text-transform: uppercase
 
