--- a/app/views/activities/_overview.html.haml
+++ b/app/views/activities/_overview.html.haml
@@ -3,23 +3,26 @@
     .row
       .span8
         %h1= activity.title
-        %p= activity.description
+
+        -# Removed for demo
+        -# %p= activity.description
       .span4
+        -# Removed for demo
+        -# .row
+        -#   .span4
+        -#     %h5 Difficulty Level
+        -# .row
+        -#   .span4
+        -#     %span{ class: "difficulty #{activity.difficulty.downcase}"}
+        -#       = activity.difficulty.capitalize
+        -# .row
+        -#   .span4
+        -#     .horizontal-divider
         .row
-          .span4
-            %h5 Difficulty Level
-        .row
-          .span4
-            %span{ class: "difficulty #{activity.difficulty.downcase}"}
-              = activity.difficulty.capitalize
-        .row
-          .span4
-            .horizontal-divider
-        .row
-          .span4
+          .span4.cooked-this-count
             %i.icon-pot-brick
             %span#cooked-count= activity.cooked_this
-            %span Cooked This
+            %span.verbage Cooked This
       .span12
         .horizontal-divider
     .row
