--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -14,13 +14,47 @@
     .span8
       %h1 Description
       %p
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pulvinar
-        lobortis dolor, sit amet mollis sem sagittis in. Etiam nec mauris enim.
-        Praesent suscipit, felis eu facilisis lobortis, eros odio adipiscing
-        felis, et congue justo est ut libero. Praesent dictum, nulla eu
-        ultricies ornare, arcu justo pulvinar nisl, id adipiscing velit nisl nec
-        nunc. Duis mollis, risus vitae suscipit tristique, augue odio
-        pellentesque tortor, in consectetur eros ligula et nulla. In id odio
+        Sous vide cooking is at the core of modernist cooking. Once used in
+        only the most forward-thinking restaurants, sous vide cooking is
+        rapidly being adopted as a mainstream cooking technique in both homes
+        and restaurants around the world. Through lectures and step-by-step
+        demonstrations you will master this highly flexible way to cook
+        virtually any food.
+
+      %p
+        The course will:
+
+      %ol.text
+        %li
+          Get you started with the basics of sous vide cooking and then quickly
+          have you using intermediate and advanced sous vide techniques.
+
+        %li
+          Develop your intuition for one of the most fundamental ingredients of
+          all cooking: heat.
+
+        %li
+          Understand the relationship between cooking temperature and time so
+          that you get the results you want every time.
+
+        %li
+          Explore different strategies for cooking animal and plant foods so
+          that you can cook anything sous vide with confidence.
+
+        %li
+          Learn to adapt traditional recipes you love to sous vide cooking
+          methods for greater convenience and consistency.
+
+        %li
+          Use your sous vide equipment in ways that unlock your creativity in
+          the kitchen.
+
+        %li
+          Learn the relevant health and food safety issues for sous vide cooking so that you can prepare healthier food and reduces the chance of food borne illness.
+
+      %p
+        No other course matches our comprehensive approach to understanding sous vide cooking.
+
       %h3 Instructors
       %ul.unstyled
         %li.instructor
