update seeds and show view

--- a/app/views/activities/_step.html.haml
+++ b/app/views/activities/_step.html.haml
@@ -2,7 +2,7 @@
   .span4
     %h3
       :erb
-        <strong><%="Step #{count}: "%></strong><%=raw step.title%>
+        <strong><%="Step #{count}"%></strong>
     - if step.ingredients.any?
       .well
         %h6 Ingredients
