--- a/app/assets/stylesheets/application/activities/_step_by_step.css.sass
+++ b/app/assets/stylesheets/application/activities/_step_by_step.css.sass
@@ -50,3 +50,8 @@
 .hero-step-by-step
   padding-bottom: 20px
   margin-bottom: 0
+
+.step-directions
+  line-height: 1.6em
+  li
+    margin-top: 0.8em
