--- a/app/views/activities/_step.html.haml
+++ b/app/views/activities/_step.html.haml
@@ -12,8 +12,9 @@
               %td= ingredient.title
               %td= quantity_number(ingredient.quantity)
               %td= ingredient.unit
-    :markdown
-      #{step.directions}
+    .step-directions
+      :markdown
+        #{step.directions}
   .span8
     .well.video
       .video-container
