remote title and text align ingredients

--- a/app/assets/stylesheets/application/activities/_step_by_step.css.sass
+++ b/app/assets/stylesheets/application/activities/_step_by_step.css.sass
@@ -20,6 +20,8 @@
     color: $brick
   table
     width: 100%
+    .quantity
+      text-align: right
   .well
     border: none
     background: $grayLight
