--- a/app/views/activities/_step.html.haml
+++ b/app/views/activities/_step.html.haml
@@ -20,8 +20,8 @@
     - if step.youtube_id?
       .well.video
         .video-container
-          %iframe{:src => youtube_url(step.youtube_id)}
+          %iframe{src: youtube_url(step.youtube_id)}
     - else
       .well
-        = image_tag("recipes/IMG_#{step.image_id}.jpg")
+        %img{src: s3_image_url(step.image_id)}
 
