--- a/app/assets/stylesheets/application/courses/_course_breakdown.css.sass
+++ b/app/assets/stylesheets/application/courses/_course_breakdown.css.sass
@@ -14,6 +14,12 @@
   ul
     list-style-type: none
     margin-left: 20px
+    li
+      text-indent: -5px
+      &:before
+        content: '-'
+        position: relative
+        left: -5px
   li
     +font-sans-small
     color: $gray
