--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -3,7 +3,7 @@
 .hero-unit.course-title
   .container
     .row12
-      %h3 Accerlated Sous Vide Cooking Course
+      %h3 Accelerated Sous Vide Cooking Course
 .container
   .row.top-video
     .span12
