--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -14,6 +14,6 @@
           .addthis_toolbox.addthis_default_style.pull-right
             %a.addthis_button_pinterest_pinit
             %a.addthis_button_google_plusone{ 'g:plusone:size' => 'standard', 'g:plusone:annotation' => 'none' }
-            %a.addthis_button_facebook_like{ 'fb:like:width' => '75' }
+            %a.addthis_button_facebook_like
             %a.addthis_button_tweet
 
