--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,7 @@
 -# <!--[if IE 8]>  <html class="no-js lt-ie9" lang="en"> <![endif]-->
 -# <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 
-%html.no-js{:lang => "en"}
+%html.no-js{:lang => "en", 'xmlns:fb' => "http://ogp.me/ns/fb#" }
 
   %head
 
