center 'I cooked this' button

--- a/app/assets/stylesheets/application/activities/_step_by_step.css.sass
+++ b/app/assets/stylesheets/application/activities/_step_by_step.css.sass
@@ -47,7 +47,7 @@
     +border-radius(5px)
     padding: 10px 15px
     span
-      vertical-align: bottom
+      vertical-align: middle
 
 .hero-step-by-step
   padding-bottom: 20px
