--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -115,6 +115,11 @@
 
     -# %script{:src => "/js/libs/modernizr.custom.js"}
 
+    :erb
+      <script type="text/javascript">var switchTo5x=false;</script>
+      <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+      <script type="text/javascript">stLight.options({publisher: "4280f719-a92e-4fc0-a641-06a4aea6ccf5"}); </script>
+
   %body
 
     -# ==========================================================================
@@ -134,4 +139,3 @@
     -# Custom JS
     = javascript_include_tag "application"
     = render 'layouts/google_analytics' if Rails.env.production?
-    = render 'layouts/add_this'
