--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -2,8 +2,15 @@
 
 .hero-unit.course-title
   .container
-    .row12
-      %h3 Accelerated Sous Vide Cooking Course
+    .row
+      .span8
+        %h3 Accelerated Sous Vide Cooking Course
+      .span4
+        %a.button.pull-right{ href: activity_path(1) }
+          .inner
+            Start Course
+            %i.icon-double-chevron-right
+
 .container
   .row.top-video
     .span12
