--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -13,7 +13,10 @@
     .caption-content
       %h3 Master sous vide cooking
       %h4 in our first free to learn cooking course
-      = link_to "Preview Course »", course_path(1)
+      %a.button{ href: course_path(1) }
+        .inner
+          Preview Course
+          %i.icon-double-chevron-right
 
 .hero-unit.signup-banner
   .container
