Put video in well

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -25,10 +25,21 @@ p
   .row:first-child
     margin-top: 0
 
+.hero-well
+  background: whiteSmoke
+  padding: 20px 0
+  border-top: 1px solid $grayLight
+  border-bottom: 1px solid $grayLight
+
+
 .hero-comments
   margin-bottom: 0
   background: $grayLight
   color: $black
+
+.top-video
+  padding-left: 10px
+  padding-right: 10px
 
 ul.horizontal-list
   margin: 0
