--- a/app/views/activities/_step_by_step.html.haml
+++ b/app/views/activities/_step_by_step.html.haml
@@ -1,4 +1,4 @@
-.hero-unit.gray.hero-step-by-step
+.hero-unit.hero-well.hero-step-by-step
   .container.step-by-step
     - activity.recipes.each do |recipe|
       - if recipe.steps.any?
