--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -4,12 +4,13 @@
 
 = render 'courses/navigation', model: activity
 
-.container
-  - if activity.youtube_id?
-    .row.top-video
-      .span12
-        .video-container
-          %iframe{src: youtube_url(activity.youtube_id)}
+.hero-unit.hero-well
+  .container
+    - if activity.youtube_id?
+      .row.top-video
+        .span12
+          .video-container
+            %iframe{src: youtube_url(activity.youtube_id)}
 
 = render 'overview', activity: activity
 #step-by-step
