change course overview mobile order

--- a/app/assets/stylesheets/application/courses/_show.css.sass
+++ b/app/assets/stylesheets/application/courses/_show.css.sass
@@ -13,6 +13,9 @@
     +font-serif-large
     text-transform: uppercase
 
+.row.instructors
+  margin-left: 0
+
 .instructor
   margin-top: 30px
   h4
