update page title

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,4 +1,4 @@
-- content_for :title, "Welcome!"
+- content_for :title, "Free to Learn Culinary School"
 
 .slider-block
   #myCarousel.carousel.slide{ data: { interval: 10000 } }
