--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -63,7 +63,7 @@
         No other course matches our comprehensive approach to understanding sous vide cooking.
 
     .span4.pull-right
-      = render 'course_breakdown', activities: activities
+      = render 'course_breakdown', copy: syllabus_copy
     .span8.pull-left
       %h3 Instructors
       %ul.unstyled
